# neml

./: '  .gitignore  .readthedocs.yaml  .travis.yml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  MANIFEST.in  Model_description.rst  README.md  requirements.txt  setup.py  tox.ini
.libs/: libneml-opt.lai
coverage/: coverage.sh
doc/: CMakeLists.txt  manual.lyx  requirements.txt  xml-input.graphml
doc/cp/: development.lyx  formula.py  projections.py
doc/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
doc/harmonics/: d-matrix.py
doc/large-def/: update_formula.py
doc/manual/: manual.lyx  xml-input.graphml
doc/sphinx/: about.rst  advanced.rst  block.rst  conf.py  creep.rst  crystal_plasticity.rst  damage.rst  elasticity.rst  general_flow.rst  hardening.rst  index.rst  integration.rst  interfaces.rst  interpolate.rst  larsonmiller.rst  python.rst  references.rst  ri_flow.rst  started.rst  surfaces.rst  tutorial.rst  vp_flow.rst  walker.rst
doc/sphinx/advanced/: errors.rst  history.rst  math.rst  objects.rst  python.rst  solvers.rst  tutorial.rst
doc/sphinx/advanced/math/: matrix.rst  rotations.rst  tensors.rst
doc/sphinx/advanced/math/rotations/: Orientation.rst  Quaternion.rst
doc/sphinx/advanced/math/tensors/: RankFour.rst  RankTwo.rst  Skew.rst  SkewSym.rst  SkewSymR4.rst  SymSkew.rst  SymSkewR4.rst  SymSym.rst  SymSymR4.rst  Symmetric.rst  Vector.rst
doc/sphinx/cp/: CrystalDamageModel.rst  CrystalPostprocessor.rst  HuCocks.rst  InelasticModel.rst  KinematicModel.rst  SlipHardening.rst  SlipRule.rst  StandardKinematicModel.rst  crystaldamage.rst  crystallography.rst  polefigures.rst  polycrystal.rst
doc/sphinx/cp/cpdmg/: NilDamageModel.rst  PlanarDamageModel.rst  SlipPlaneDamage.rst  TransformationFunction.rst
doc/sphinx/cp/crystallography/: CubicLattice.rst  GeneralLattice.rst  HCPLattice.rst  Lattice.rst  SymmetryGroup.rst
doc/sphinx/cp/inelasticity/: AsaroInelasticity.rst  CombinedInelasticity.rst  NoInelasticity.rst  PowerLaw.rst  PowerLawInelasticity.rst
doc/sphinx/cp/polycrystal/: taylor.rst
doc/sphinx/cp/postprocessors/: PTRTwinReorientation.rst
doc/sphinx/cp/sliphardening/: FASlipHardening.rst  FixedStrengthHardening.rst  GeneralLinearHardening.rst  LANLTiModel.rst  LinearSlipHardening.rst  PlasticSlipHardening.rst  SimpleLinearHardening.rst  SlipSingleHardening.rst  SlipSingleStrengthHardening.rst  SumSlipSingleStrengthHardening.rst  VocePerSystemHardening.rst  VoceSlipHardening.rst
doc/sphinx/cp/sliprule/: KinematicPowerLawSlipRule.rst  PowerLawSlipRule.rst  SlipMultiStrengthSlipRule.rst  SlipStrengthSlipRule.rst
doc/sphinx/creep/: j2_creep.rst  s_blackburn.rst  s_crmo.rst  s_generic.rst  s_km.rst  s_mukherjee.rst  s_normpower.rst  s_norton.rst  s_power.rst  s_swindeman.rst  scalar.rst
doc/sphinx/damage/: classical.rst  combined.rst  exponential.rst  larsonmiller.rst  modular.rst  powerlaw.rst  scalar.rst  scalardamage.rst  scalarrate.rst  standard.rst  work.rst  workrate.rst
doc/sphinx/damage/effective/: effective.rst  huddleston.rst  maxprincipal.rst  maxseveral.rst  meanstress.rst  sumseveral.rst  vonmises.rst
doc/sphinx/elastic/: dummy_elastic.rst  isotropic_elastic.rst
doc/sphinx/general_flow/: viscoplastic.rst  walkerkrempl.rst
doc/sphinx/hardening/: nonassociative.rst  simple.rst
doc/sphinx/hardening/non/: chaboche.rst  special_chaboche.rst
doc/sphinx/hardening/simple/: combined.rst  iso_combined.rst  iso_interpolated.rst  iso_linear.rst  iso_power.rst  iso_voce.rst  isotropic.rst  kin_linear.rst  kinematic.rst
doc/sphinx/install/: linux.rst  mac.rst  windows.rst
doc/sphinx/interfaces/: NEMLModel.rst  NEMLModel_ldi.rst  NEMLModel_sd.rst  creep_plasticity.rst  general_integrator.rst  km_regime.rst  lelastic.rst  perfect.rst  rate_independent.rst
doc/sphinx/interfaces/classes/: NEMLModel.rst  NEMLModel_sd.rst
doc/sphinx/python/: arbbar.rst  axisym.rst  drivers.rst  uniaxial.rst
doc/sphinx/ri_flow/: associative.rst  nonassociative.rst
doc/sphinx/surfaces/: isoj2.rst  isoj2i1.rst  isokinj2.rst  isokinj2i1.rst
doc/sphinx/vp_flow/: chaboche.rst  linear.rst  perzyna.rst  superimposed.rst  yaguchi.rst
doc/sphinx/walker/: testflow.rst  walkerdrag.rst  walkerflow.rst  walkeriso.rst  walkerkin.rst  walkerscaling.rst  walkersoften.rst  wrapper.rst
examples/: 316.xml  axi.py  axi_stresses.py  axisymmetric.py  bar_verification.py  bree.py  compare_bar_approaches.py  constrained_axi.py  creep.py  creep_plasticity.py  damage.py  (+28 more)
src/: CMakeLists.txt  block.cxx  block.h  block_wrap.cxx  cinterface.cxx  cinterface.h  creep.cxx  creep.h  creep_wrap.cxx  damage.cxx  damage.h  damage_wrap.cxx  deparse.cxx  deviatoric.cxx  deviatoric.h  deviatoric_wrap.cxx  elasticity.cxx  elasticity.h  elasticity_wrap.cxx  general_flow.cxx  general_flow.h  general_flow_wrap.cxx  hardening.cxx  hardening.h  hardening_wrap.cxx  history.cxx  history.h  history_wrap.cxx  internalvariable.h  interpolate.cxx  interpolate.h  interpolate_wrap.cxx  larsonmiller.cxx  larsonmiller.h  larsonmiller_wrap.cxx  macros.cmake  models.cxx  models.h  models_wrap.cxx  neml.cxx  (+44 more)
src/cp/: CMakeLists.txt  batch.cxx  batch.h  batch_wrap.cxx  crystaldamage.cxx  crystaldamage.h  crystaldamage_wrap.cxx  crystallography.cxx  crystallography.h  crystallography_wrap.cxx  generalizedhucocks.cxx  generalizedhucocks_wrap.cxx  harmonics.cxx  harmonics.h  harmonics_wrap.cxx  hucocks.cxx  hucocks.h  hucocks_wrap.cxx  inelasticity.cxx  inelasticity.h  inelasticity_wrap.cxx  kinematics.cxx  kinematics.h  kinematics_wrap.cxx  polycrystal.cxx  polycrystal.h  polycrystal_wrap.cxx  postprocessors.cxx  postprocessors_wrap.cxx  singlecrystal.cxx  singlecrystal.h  singlecrystal_wrap.cxx  slipharden.cxx  slipharden.h  slipharden_wrap.cxx  sliprules.cxx  sliprules.h  sliprules_wrap.cxx  sphere.h
src/math/: CMakeLists.txt  matrix.cxx  matrix.h  matrix_wrap.cxx  nemlmath.cxx  nemlmath.h  nemlmath_wrap.cxx  projections.cxx  projections.h  projections_wrap.cxx  rotations.cxx  rotations.h  rotations_wrap.cxx  tensors.cxx  tensors.h  tensors_wrap.cxx
(+308 files in other folders)
